tests/NormalTests/paczka1/small_fuzzy/30089039.err
Error in line 4: pu9xpN A326 57,4
Error in line 6: pu9xpN S867 0,6
Error in line 7: dFK2O3EXh S867 11,9
